Add symfish directive.

--- a/caravan.config
+++ b/caravan.config
@@ -3,7 +3,8 @@
 # {directive: (target_path, hidden)}
 LINK_DIRECTIVES = {
     'symh': ('$HOME/test', True),
-    'symc': ('$HOME/test/.config', False)
+    'symc': ('$HOME/test/.config', False),
+    'symfish': ('$HOME/test/.config/fish', False)
 }
 
 # Install directives to match on. These files be executed with their command
