Improve fish and git installs.

--- a/caravan.config
+++ b/caravan.config
@@ -4,7 +4,8 @@
 LINK_DIRECTIVES = {
     'symh': ('$HOME/test', True),
     'symc': ('$HOME/test/.config', False),
-    'symfish': ('$HOME/test/.config/fish', False)
+    'symfish': ('$HOME/test/.config/fish', False),
+    'symbin': ('/usr/bin/', False)
 }
 
 # Install directives to match on. These files be executed with their command
