--- a/caravan.config
+++ b/caravan.config
@@ -1,3 +1,5 @@
+#!/usr/bin/env python3
+
 # Link directives to match on. Matching files/directories will be symlinked
 # to their target_path
 # {directive: (target_path, hidden)}
